==> JBarreraINO/Arduino/QTRAExampleMux/QTRAExampleMux/QTRSensors/QTRSensors_cpp/QTRSensors.cpp <==
#include <stdlib.h>
#include "QTRSensors.h"
#include <Arduino.h>

void QTRSensors::init(unsigned char *pins, unsigned char numSensors,
  unsigned char emitterPin)
{

    calibratedMinimumOn=0;
    calibratedMaximumOn=0;
    calibratedMinimumOff=0;
    calibratedMaximumOff=0;

    if (numSensors > QTR_MAX_SENSORS)
        _numSensors = QTR_MAX_SENSORS; // 16 sensores MAXIMO
    else
        _numSensors = numSensors;

    if (_pins == 0)
    {
        _pins = (unsigned char*)malloc(sizeof(unsigned char)*_numSensors);
        if (_pins == 0)
            return;
    }

    unsigned char i;
    for (i = 0; i < _numSensors; i++)
    {
        _pins[i] = pins[i];
    }

    _emitterPin = emitterPin;
}

void QTRSensors::emittersOff()
{
    if (_emitterPin == QTR_NO_EMITTER_PIN)
        return;
    pinMode(_emitterPin, OUTPUT);
    digitalWrite(_emitterPin, LOW);
    delayMicroseconds(200);
}

void QTRSensors::emittersOn()
{
    if (_emitterPin == QTR_NO_EMITTER_PIN)
        return;
    pinMode(_emitterPin, OUTPUT);
    digitalWrite(_emitterPin, HIGH);
    delayMicroseconds(200);
}

void QTRSensorsRC::init(unsigned char* pins,
    unsigned char numSensors, unsigned int timeout, unsigned char emitterPin)
{
    QTRSensors::init(pins, numSensors, emitterPin);

    _maxValue = timeout;
}

void QTRSensorsRC::readPrivate(unsigned int *sensor_values)
{
    unsigned char i;

    if (_pins == 0)
        return;

    for(i = 0; i < _numSensors; i++)
    {
        sensor_values[i] = _maxValue;
        digitalWrite(_pins[i], HIGH);   // make sensor line an output
        pinMode(_pins[i], OUTPUT);      // drive sensor line high
    }

    delayMicroseconds(10);              // charge lines for 10 us

    for(i = 0; i < _numSensors; i++)
    {
        pinMode(_pins[i], INPUT);       // make sensor line an input
        digitalWrite(_pins[i], LOW);        // important: disable internal pull-up!
    }

    unsigned long startTime = micros();
    while (micros() - startTime < _maxValue)
    {
        unsigned int time = micros() - startTime;
        for (i = 0; i < _numSensors; i++)
        {
            if (digitalRead(_pins[i]) == LOW && time < sensor_values[i])
                sensor_values[i] = time;
        }
    }
}

void QTRSensorsAnalog::init(unsigned char* pins,
    unsigned char numSensors, unsigned char numSamplesPerSensor,
    unsigned char emitterPin)
{
    QTRSensors::init(pins, numSensors, emitterPin);

    _numSamplesPerSensor = numSamplesPerSensor;
    //_maxValue = 1023; // this is the maximum returned by the A/D conversion
    _maxValue = 4095; // this is the maximum returned by the A/D conversion in ESP32
}

void QTRSensorsAnalog::readPrivate(unsigned int *sensor_values)
{
    unsigned char i, j;

    if (_pins == 0)
        return;

    // reset the values
    for(i = 0; i < _numSensors; i++)
        sensor_values[i] = 0;

    for (j = 0; j < _numSamplesPerSensor; j++)
    {
        for (i = 0; i < _numSensors; i++)
        {
            sensor_values[i] += analogRead(_pins[i]);  
        }
    }

    // get the rounded average of the readings for each sensor
    for (i = 0; i < _numSensors; i++)
        sensor_values[i] = (sensor_values[i] + (_numSamplesPerSensor >> 1)) /
            _numSamplesPerSensor;
}

void QTRSensorsMux::init (unsigned char* pins, unsigned char numSensors, unsigned char numSamplesPerSensor,
                            unsigned char inPin, unsigned char* muxPins)
{
    QTRSensors::init(pins, numSensors, (unsigned char)255);
    unsigned char i;
    for (i = 0; i < 4; i++)
    {
        _muxPins[i] = muxPins[i];
    }
    pinMode (_muxPins[0], OUTPUT);
    pinMode (_muxPins[1], OUTPUT);
    pinMode (_muxPins[2], OUTPUT);
    pinMode (_muxPins[3], OUTPUT);
    _inPin = inPin;
    _numSamplesPerSensor = numSamplesPerSensor;
    //_maxValue = 1023; // this is the maximum returned by the A/D conversion
    _maxValue = 4095; // this is the maximum returned by the A/D conversion in ESP32

}

void QTRSensorsMux::readPrivate(unsigned int *sensor_values)
{
    unsigned char i, j;

    if (_pins == 0)
        return;

    // reset the values
    for(i = 0; i < _numSensors; i++)
        sensor_values[i] = 0;

    for (j = 0; j < _numSamplesPerSensor; j++)
    {
        for (i = 0; i < _numSensors; i++)
        {
            sensor_values[i] += readMux(_pins[i]);
        }
    }

    // get the rounded average of the readings for each sensor
    for (i = 0; i < _numSensors; i++)
        sensor_values[i] = (sensor_values[i] + (_numSamplesPerSensor >> 1)) /
            _numSamplesPerSensor;
}
